# GraGLeS

./: .gitignore  .gitmodules  README.md
code/: README.md
code/structure_generator/: CMakeLists.txt  README.md
code/structure_generator/src/cxx/: ExpandingVector.h  Grains.cpp  Grains.h  IGrainScheduler.h  IterativeGrainScheduler.cpp  IterativeGrainScheduler.h  Settings.cpp  Settings.h  SubGrain.cpp  SubGrain.h  allocator.cpp  dimensionalBuffer.h  microStructureHdl.cpp  microStructureHdl.h  myQuaternion.cpp  myQuaternion.h  mymath.cpp  mymath.h  newMicrostructureGenerator.cpp  random.cpp  random.h  utilities.h
code/twod_obc_solver/: CMakeLists.txt  CMakeListsOld.txt  CMakeListsWithIntel.txt  README.md
code/twod_obc_solver/src/cxx/: ContourSector.cpp  ContourSector.h  Curvapprx.h  DimensionalBuffer.h  DimensionalBufferIdLocal.h  DimensionalBufferReal.h  GrahamScan.cpp  GrahamScan.h  GrainBoundary.cpp  GrainBoundary.h  GrainHdl.cpp  GrainHdl.h  GrainScheduler.h  IterativeGrainScheduler.h  Junction.cpp  Junction.h  LsBox.cpp  LsBox.h  MKLLapackeExampleRowMajor.cpp  MarchingSquares.cpp  MarchingSquares.h  Misorientation.cpp  Misorientation.h  MyMath.cpp  MyMath.h  MyRandom.cpp  Quaternion.cpp  Quaternion.h  Settings.cpp  Settings.h  SquaresGrainScheduler.cpp  SquaresGrainScheduler.h  Structs.h  TwodObcSolver.cpp  TwodObcSolver.h  Utilities.h  box.cpp  box.h  ggLS.cpp  ggLS.h  (+4 more)
code/utils/src/cxx/: PARAPROBE_HDF5Core.cpp  PARAPROBE_HDF5Core.h
teaching_material/example_analysis/structure_generator/: CR70FeSi.Rogge.MTEX.vpsc.odf.5000.txt  PreferenceOrientations.txt  README.md  STDOUT.txt  StructureGenerator.Results.SimID.0.nxs  parameters.xml  workflow.ipynb
teaching_material/example_analysis/structure_generator/.ipynb_checkpoints/: STDERR-checkpoint.txt  STDOUT-checkpoint.txt  parameters-checkpoint.xml
teaching_material/example_analysis/structure_generator/test/: Microstructure.SimID.10.uds  MicrostructureDiagnostics.SimID.10.uds  StructureGenerator.STDOUT.txt
teaching_material/example_analysis/twod_obc_solver/: FeSiWithSEECuboidsProduction.xml  README.md  Twod.Obc.Solver.Results.SimID.0.Step1.Grains.xdmf  parameters.xml  run.sh  twod_obc_solver_howto.ipynb  workflow.ipynb
